--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "jalameta/jps-patcher",
     "description": "Laravel patch scripts.",
     "require": {
-        "illuminate/database": "^6.0"
+        "illuminate/database": "^6.0|^.70"
     },
     "license": "MIT",
     "authors": [
