--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
             ]
         },
         "branch-alias": {
+            "dev-1.x": "1.1-dev",
             "dev-master": "2.0-dev"
         }
     }
