--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "jalameta/jps-patcher",
     "description": "Laravel patch scripts.",
     "require": {
-        "illuminate/database": "^6.0"
+        "illuminate/database": "^7.0",
+        "illuminate/console": "^7.0"
     },
     "license": "MIT",
     "authors": [
