--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "jalameta/jps-patcher",
     "description": "Laravel patch scripts.",
     "require": {
+        "illuminate/support": "^8.0",
+        "illuminate/log": "^8.0",
         "illuminate/database": "^8.0",
         "illuminate/console": "^8.0"
     },
