--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
         "illuminate/database": "^8.0",
         "illuminate/console": "^8.0"
     },
+    "require-dev": {
+        "mockery/mockery": "^1.4.2",
+        "phpunit/phpunit": "^8.5.8|^9.3.3",
+        "laravel/framework": "^8.0"
+    },
     "license": "MIT",
     "authors": [
         {
@@ -18,6 +23,14 @@
         "psr-4": {
             "Jalameta\\Patcher\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Jalameta\\Patcher\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     },
     "minimum-stability": "stable",
     "extra": {
