--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,10 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit",
+        "post-autoload-dump": [
+            "@php ./vendor/bin/testbench package:discover --ansi"
+        ]
     },
     "minimum-stability": "stable",
     "extra": {
